--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,9 @@ dependencies:
   animate_do: ^3.3.3
   flutter:
     sdk: flutter
+  flutter_riverpod: ^2.4.10
   go_router: ^13.1.0
+  riverpod: ^2.5.0
 
 dev_dependencies:
   flutter_lints: ^2.0.0
